feat: add full Product CRUD
