# app/Enums/ProductType.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Enums;
+
+enum ProductType: string
+{
+    case FixedPrice = 'fixed_price';
+    case Auction = 'auction';
+}
